--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
     "name": "My Sample PWA",
     "lang": "en-us",
     "short_name": "SamplePWA",
-  icription": "A sample PWA for testing purposes",
+  	"description": "A sample PWA for testing purposes",
     "start_url": "/index.html",
-    "display": "standalone",
+    "display": "fullscreen",
     "theme_color": "#3B5FA7",
     "background_color": "#173369",
     "orientation": "any",
