--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://epieper.github.io/Ultimate3AETool",
+    "start_url": "https://epieper.github.io/Ultimate3AETool",
     "name": "My Sample PWA",
     "lang": "en-us",
     "short_name": "SamplePWA",
