--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "background_color": "#12225f",
     "display": "browser",
     "scope": "/Ultimate3AETool/",
-    "start_url": "/index.html",
+    "start_url": "/Ultimate3AETool/index.html",
     "name": "Ulimate 3AE Tool",
     "short_name": "3AE Tool",
     "icons": [
